cfn_benchmark/cfn_templates/i-zacky__leone/templates/security-group/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31
Description: SecurityGroup

Parameters:
  Project:
    Type: String
  Env:
    Type: String

  VpcId:
    Type: AWS::EC2::VPC::Id

  CIDR:
    Type: String

Resources:
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${Project}-bastion-sg'
      GroupDescription: !Sub '${Env}-${Project}-bastion-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
          Description: SSH
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${Project}-bastion-sg'

  AuroraSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${Project}-aurora-sg'
      GroupDescription: !Sub '${Env}-${Project}-aurora-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 5432
          ToPort: 5432
          Description: PostgreSQL Port
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${Project}-aurora-sg'

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${Project}-public-sg'
      GroupDescription: !Sub '${Env}-${Project}-public-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: !Select [0, !Cidr [!Ref CIDR, 6, 8]]
          Description: Public Subnet IP AZ-A
        - IpProtocol: -1
          CidrIp: !Select [1, !Cidr [!Ref CIDR, 6, 8]]
          Description: Public Subnet IP AZ-C
        - IpProtocol: -1
          CidrIp: !Select [2, !Cidr [!Ref CIDR, 6, 8]]
          Description: Public Subnet IP AZ-D
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${Project}-public-sg'

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${Project}-private-sg'
      GroupDescription: !Sub '${Env}-${Project}-private-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: !Select [3, !Cidr [!Ref CIDR, 6, 8]]
          Description: Internal Subnet IP AZ-A
        - IpProtocol: -1
          CidrIp: !Select [4, !Cidr [!Ref CIDR, 6, 8]]
          Description: Internal Subnet IP AZ-C
        - IpProtocol: -1
          CidrIp: !Select [5, !Cidr [!Ref CIDR, 6, 8]]
          Description: Internal Subnet IP AZ-D
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${Project}-private-sg'

  ECSWebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${Project}-ecs-web-sg'
      GroupDescription: !Sub '${Env}-${Project}-ecs-web-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref PrivateSecurityGroup
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref PublicSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${Project}-ecs-web-sg'

  ECSAPISecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-${Project}-ecs-api-sg'
      GroupDescription: !Sub '${Env}-${Project}-ecs-api-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref PrivateSecurityGroup
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref PublicSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${Env}-${Project}-ecs-api-sg'

Outputs:
  BastionSecurityGroupId:
    Value: !GetAtt BastionSecurityGroup.GroupId

  AuroraSecurityGroupId:
    Value: !GetAtt AuroraSecurityGroup.GroupId

  PublicSecurityGroupId:
    Value: !GetAtt PublicSecurityGroup.GroupId

  PrivateSecurityGroupId:
    Value: !GetAtt PrivateSecurityGroup.GroupId

  ECSWebSecurityGroupId:
    Value: !GetAtt ECSWebSecurityGroup.GroupId

  ECSAPISecurityGroupId:
    Value: !GetAtt ECSAPISecurityGroup.GroupId
